# cpu

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: README.md
include/logic/alu/: Alu.h
include/logic/alu/add/: FullAdder.h  RippleAdder.h
include/logic/alu/logic/: BitwiseAND.h  BitwiseNAND.h  BitwiseNOR.h  BitwiseNOT.h  BitwiseOR.h  BitwiseXNOR.h  BitwiseXOR.h
include/logic/alu/shifts/: RotateL.h  RotateR.h  ShiftL0.h  ShiftL1.h  ShiftR0.h  ShiftR1.h
include/logic/base/: Logic.h
include/logic/data/: DFlipFlop.h  DLatch.h  Register.h  Register16.h  Register8.h
include/logic/gates/: And.h  Nand.h  Nor.h  Not.h  Or.h  Selector.h  Xnor.h  Xor.h
include/logic/util/: Bit.h  DualMultiplexer.h
src/: README.md
src/logic/: README.md  bit.cpp  bit.h
src/logic/alu/: Alu.cpp  README.md  alu.cpp  alu.h  bitwiseAND.h  bitwiseNOT.cpp  bitwiseNOT.h  bitwiseOR.h  bitwiseXOR.h
src/logic/alu/add/: FullAdder.cpp  RippleAdder.cpp  fulladder.cpp  fulladder.h  rippleadder.cpp  rippleadder.h
src/logic/alu/logic/: BitwiseAND.cpp  BitwiseNAND.cpp  BitwiseNOR.cpp  BitwiseNOT.cpp  BitwiseOR.cpp  BitwiseXNOR.cpp  BitwiseXOR.cpp  bitwiseAND.cpp  bitwiseAND.h  bitwiseNAND.cpp  bitwiseNAND.h  bitwiseNOR.cpp  bitwiseNOR.h  bitwiseNOT.cpp  bitwiseNOT.h  bitwiseOR.cpp  bitwiseOR.h  bitwiseXNOR.cpp  bitwiseXNOR.h  bitwiseXOR.cpp  bitwiseXOR.h
src/logic/alu/shifts/: RotateL.cpp  RotateR.cpp  ShiftL0.cpp  ShiftL1.cpp  ShiftR0.cpp  ShiftR1.cpp  rotateL.cpp  rotateLcarry.cpp  rotateLcarry.h  rotateR.cpp  rotateR.h  rotateRcarry.cpp  rotrateL.cpp  rotrateL.h  rotrateLcarry.cpp  rotrateR.cpp  rotrateRcarry.cpp  rotrateRcarry.h  shiftL0.cpp  shiftL0.h  shiftL1.cpp  shiftL1.h  shiftR0.cpp  shiftR0.h  shiftR1.cpp  shiftR1.h
src/logic/base/: InputBits.h  Logic.cpp  Logic.h  Node.cpp  NodeTypeGetter.cpp  OutputBits.h  README.md  component_factory.h  node.cpp  node.h  nodetypegetter.cpp
src/logic/data/: DFlipFlop.cpp  DLatch.cpp  README.md  Register.cpp  Register16.cpp  Register8.cpp  dflipflop.cpp  dflipflop.h  dlatch.cpp  dlatch.h  register.cpp  register.h  register16.cpp  register16.h  register8.cpp  register8.h
src/logic/gates/: And.cpp  Nand.cpp  Nor.cpp  Not.cpp  Or.cpp  README.md  Selector.cpp  Xnor.cpp  Xor.cpp  and.cpp  and.h  nand.cpp  nand.h  nor.cpp  nor.h  not.cpp  not.h  or.cpp  or.h  selector.cpp  selector.h  xnor.cpp  xnor.h  xor.cpp  xor.h
src/logic/util/: Bit.cpp  DualMultiplexer.cpp  dualmultiplexer.cpp  dualmultiplexer.h
src/observer/: observable.cpp  observable.h  observer.h
tests/: README.md  test_alu.cpp  test_data.cpp  test_gates.cpp
